src/objects/Service_Order_Kit_Header__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Kit_Price__c</fullName>
        <label>Actual Kit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Can_Split__c</fullName>
        <defaultValue>true</defaultValue>
        <description>a checkbox indicator to control whether or not the kit can be split apart once it has been added to an Items sub-section of a customer order.  By default this will be set to True</description>
        <label>Can Split</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>Required Field.  A unique identifier for the Kit created by the user.</description>
        <label>Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Deal Item</description>
        <label>Deal Item</label>
        <referenceTo>Deal_Item__c</referenceTo>
        <relationshipLabel>Service Order Kit Headers</relationshipLabel>
        <relationshipName>Service_Order_Kit_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Kit_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Kit Header</label>
        <referenceTo>Deal_Kit_Header__c</referenceTo>
        <relationshipLabel>Service Order Kit Headers</relationshipLabel>
        <relationshipName>Service_Order_Kit_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup To deal</description>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Service Order Kit Headers</relationshipLabel>
        <relationshipName>Service_Order_Kit_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Required Field.  A general description of the kit</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Price_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A check box to indicate that the user has set a fixed price for the Kit.</description>
        <label>Fixed Price Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fixed_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The dollar value that the kit is fixed at.</description>
        <label>Fixed Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Fixed_Kit_Header_SO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Fixed Kit Header Service Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kit_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kit Header</label>
        <referenceTo>Kit_Header__c</referenceTo>
        <relationshipLabel>Service Order Kit Headers</relationshipLabel>
        <relationshipName>Service_Order_Kit_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Kit_Unique_Name__c</fullName>
        <formula>Code__c &amp; &apos; - &apos; &amp;  Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kit Unique Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Order_Kit_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Kit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Kit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Order_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order Header</label>
        <referenceTo>Service_Order_Header__c</referenceTo>
        <relationshipLabel>Service Order Kit Headers</relationshipLabel>
        <relationshipName>Service_Order_Kit_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_amount__c</fullName>
        <label>Tax amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <description>Unique identifier to map on UI.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique identifier to map on UI.</inlineHelpText>
        <label>UUID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Service Order Kit Header</label>
    <nameField>
        <displayFormat>SOKH-{00000000}</displayFormat>
        <label>Service Order Kit Header Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Order Kit Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>